--- a/node17.html
+++ b/node17.html
@@ -92,7 +92,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html988"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B>Sup:</B> <A NAME="tex2html982"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
 <B> Ant:</B> <A NAME="tex2html978"
@@ -347,7 +347,7 @@ en JS. Vea este
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html988"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B>Sup:</B> <A NAME="tex2html982"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
 <B> Ant:</B> <A NAME="tex2html978"
