--- a/node18.html
+++ b/node18.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Analizadores Descendentes Predictivos</TITLE>
-<META NAME="description" CONTENT="Analizadores Descendentes Predictivos">
+<TITLE>Analizadores Descendentes Predictivos en JavaScript</TITLE>
+<META NAME="description" CONTENT="Analizadores Descendentes Predictivos en JavaScript">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04200000000000000000">
-Analizadores Descendentes Predictivos</A>
+Analizadores Descendentes Predictivos en JavaScript</A>
 </H1>
   
 <P>
