--- a/node19.html
+++ b/node19.html
@@ -95,9 +95,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1031"
   HREF="node20.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B>Sup:</B> <A NAME="tex2html1025"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1019"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Con:</B> 
 <A NAME="tex2html1026"
   HREF="node88.html">
@@ -711,9 +711,9 @@ derivaciones a izquierda y a derecha en el apartado <A HREF="node40.html#ejer:ar
 <B> Sig:</B> <A NAME="tex2html1031"
   HREF="node20.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B>Sup:</B> <A NAME="tex2html1025"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1019"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
