--- a/node20.html
+++ b/node20.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1046"
   HREF="node21.html">Recursión por la Izquierda</A>
 <B>Sup:</B> <A NAME="tex2html1040"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1034"
   HREF="node19.html">Conceptos Básicos para el</A>
 <B> Con:</B> 
@@ -696,7 +696,7 @@ analizador descendente predictivo recursivo? ¿En que orden son visitados los no
 <B> Sig:</B> <A NAME="tex2html1046"
   HREF="node21.html">Recursión por la Izquierda</A>
 <B>Sup:</B> <A NAME="tex2html1040"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1034"
   HREF="node19.html">Conceptos Básicos para el</A>
 </DIV>
