--- a/node21.html
+++ b/node21.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1062"
   HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1056"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1050"
   HREF="node20.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
@@ -220,7 +220,7 @@ terminal.
 <B> Sig:</B> <A NAME="tex2html1062"
   HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1056"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1050"
   HREF="node20.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
