--- a/node22.html
+++ b/node22.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1076"
   HREF="node23.html">Esquemas de Traducción</A>
 <B>Sup:</B> <A NAME="tex2html1070"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1064"
   HREF="node21.html">Recursión por la Izquierda</A>
 <B> Con:</B> 
@@ -328,7 +328,7 @@ CoffeeScript</A>
 <B> Sig:</B> <A NAME="tex2html1076"
   HREF="node23.html">Esquemas de Traducción</A>
 <B>Sup:</B> <A NAME="tex2html1070"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1064"
   HREF="node21.html">Recursión por la Izquierda</A>
 </DIV>
