--- a/node88.html
+++ b/node88.html
@@ -142,7 +142,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 </UL>
 <LI><A NAME="tex2html2311"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html2312"
   HREF="node19.html">Conceptos Básicos para el Análisis Sintáctico</A>
