--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 </UL>
 <LI><A NAME="tex2html303"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html304"
   HREF="node19.html">Conceptos Básicos para el Análisis Sintáctico</A>
