--- a/node1.html
+++ b/node1.html
@@ -149,7 +149,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 </UL>
 <LI><A NAME="tex2html453"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html454"
   HREF="node19.html">Conceptos Básicos para el Análisis Sintáctico</A>
