--- a/node23.html
+++ b/node23.html
@@ -94,7 +94,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1093"
   HREF="node24.html">Análisis Sintáctico Mediante Precedencia</A>
 <B>Sup:</B> <A NAME="tex2html1087"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1083"
   HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B> Con:</B> 
@@ -298,7 +298,7 @@ definición:
 <B> Sig:</B> <A NAME="tex2html1093"
   HREF="node24.html">Análisis Sintáctico Mediante Precedencia</A>
 <B>Sup:</B> <A NAME="tex2html1087"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1083"
   HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 </DIV>
