--- a/node6.html
+++ b/node6.html
@@ -146,7 +146,7 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html655"
-  HREF="node18.html">Analizadores Descendentes Predictivos</A>
+  HREF="node18.html">Analizadores Descendentes Predictivos en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html656"
   HREF="node19.html">Conceptos Básicos para el Análisis Sintáctico</A>
