--- a/node23.html
+++ b/node23.html
@@ -185,7 +185,7 @@ restas de números:
  WIDTH="179" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img63.png"
  ALT="$ expr \rightarrow expr_1 - NUM$"></SPAN></TD>
-<TD ALIGN="LEFT"><code>{ $expr{TRA} = $expr[1]{TRA}." ".$NUM{VAL}." - "}</code></TD>
+<TD ALIGN="LEFT"><code>{ expr{TRA} = expr[1]{TRA}+" "+NUM{VAL}+" - "}</code></TD>
 </TR>
 <TR><TD ALIGN="LEFT"><!-- MATH
  $expr   \rightarrow NUM$
@@ -194,7 +194,7 @@ restas de números:
  WIDTH="116" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img64.png"
  ALT="$ expr \rightarrow NUM$"></SPAN></TD>
-<TD ALIGN="LEFT"><code>{ $expr{TRA} = $NUM{VAL} }</code></TD>
+<TD ALIGN="LEFT"><code>{ expr{TRA} = NUM{VAL} }</code></TD>
 </TR>
 </TABLE>
 <BR>
@@ -208,8 +208,8 @@ hablando. Cuando hablemos del atributo de un nodo utilizaremos una indexación t
  WIDTH="53" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img65.png"
  ALT="$ NUM$"></SPAN> denotando
-su valor numérico y para accederlo escribiremos <code>$NUM{VAL}</code>.
-Análogamente <code>$expr{TRA}</code> denota el atributo ``traducción'' de
+su valor numérico y para accederlo escribiremos <code>NUM{VAL}</code>.
+Análogamente <code>expr{TRA}</code> denota el atributo ``traducción'' de
 los nodos de tipo <SPAN CLASS="MATH"><IMG
  WIDTH="40" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img66.png"
@@ -223,7 +223,7 @@ que da lugar el esquema de traducción anterior
 para la frase 7 -5 -4.</I></DIV><P></P>
 
 <P>
-En este ejemplo, el cómputo del atributo <code>$expr{TRA}</code> depende de los atributos
+En este ejemplo, el cómputo del atributo <code>expr{TRA}</code> depende de los atributos
 en los nodos hijos, o lo que es lo mismo, depende de los atributos de los símbolos
 en la parte derecha de la regla de producción. Esto ocurre a menudo y motiva la siguiente
 definición:
