--- a/node23.html
+++ b/node23.html
@@ -203,13 +203,14 @@ restas de números:
 <P>
 Las apariciones de variables sintácticas en una regla de producción se indexan
 como se ve en el ejemplo, para distinguir de que nodo del árbol de análisis estamos
-hablando. Cuando hablemos del atributo de un nodo utilizaremos una indexación tipo
-<SPAN  CLASS="textbf">hash</SPAN>. Aquí <code>VAL</code> es un atributo de los nodos de tipo <SPAN CLASS="MATH"><IMG
+hablando. Cuando hablemos del atributo de un nodo utilizaremos el punto (<code>.</code>). 
+Aquí <code>VAL</code> es un atributo de los nodos de tipo <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img65.png"
  ALT="$ NUM$"></SPAN> denotando
 su valor numérico y para accederlo escribiremos <code>NUM.VAL</code>.
-Análogamente <code>expr.TRA</code> denota el atributo ``traducción'' de
+Análogamente <code>expr.TRA</code> denota el atributo 
+<FONT COLOR="#ff0000"> traducción</FONT> de
 los nodos de tipo <SPAN CLASS="MATH"><IMG
  WIDTH="40" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img66.png"
