--- a/node23.html
+++ b/node23.html
@@ -116,10 +116,10 @@ Esquemas de Traducción
 </H1>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Un <A NAME="3491"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
+<I>Un <A NAME="3496"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
 en la cual se han insertado fragmentos de código en las partes derechas
 de sus reglas de producción. Los fragmentos de código asi insertados 
-se denominan <A NAME="3493"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
+se denominan <A NAME="3498"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
 y modifican los atributos asociados con los nodos del árbol sintáctico. 
 El orden en que se evalúan los fragmentos
 es el de un recorrido primero-profundo del árbol de análisis sintáctico.</I></DIV><P></P>
@@ -228,6 +228,14 @@ En este ejemplo, el cómputo del atributo <code>expr.TRA</code> depende de los a
 en los nodos hijos, o lo que es lo mismo, depende de los atributos de los símbolos
 en la parte derecha de la regla de producción. Esto ocurre a menudo y motiva la siguiente
 definición:
+
+<P>
+<P>
+<DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
+<I>Un atributo tal que su valor en un nodo
+puede ser computado en términos de los atributos de los hijos del nodo se dice
+que es un <A NAME="3502"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN>.</I></DIV><P></P>
+
 
 <P>
 
