--- a/node21.html
+++ b/node21.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1062"
-  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
+  HREF="node22.html">Esquemas de Traducción</A>
 <B>Sup:</B> <A NAME="tex2html1056"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1050"
@@ -218,7 +218,7 @@ terminal.
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1062"
-  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
+  HREF="node22.html">Esquemas de Traducción</A>
 <B>Sup:</B> <A NAME="tex2html1056"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1050"
