--- a/node22.html
+++ b/node22.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Práctica: Analizador Descendente Predictivo Recursivo</TITLE>
-<META NAME="description" CONTENT="Práctica: Analizador Descendente Predictivo Recursivo">
+<TITLE>Esquemas de Traducción</TITLE>
+<META NAME="description" CONTENT="Esquemas de Traducción">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1076"
-  HREF="node23.html">Esquemas de Traducción</A>
+  HREF="node23.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1070"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1064"
@@ -109,154 +109,133 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
-
-<UL CLASS="ChildLinks">
-<LI><UL>
-<LI><UL>
-<LI><A NAME="tex2html1077"
-  HREF="node22.html#SECTION04240010000000000000">Donde</A>
-<LI><A NAME="tex2html1078"
-  HREF="node22.html#SECTION04240020000000000000">Tareas</A>
-<LI><A NAME="tex2html1079"
-  HREF="node22.html#SECTION04240030000000000000">Sass</A>
-<LI><A NAME="tex2html1080"
-  HREF="node22.html#SECTION04240040000000000000">Slim</A>
-<LI><A NAME="tex2html1081"
-  HREF="node22.html#SECTION04240050000000000000">CoffeeScript</A>
-</UL></UL></UL>
-<!--End of Table of Child-Links-->
-<HR>
 
 <H1><A NAME="SECTION04240000000000000000"></A>
-   <A NAME="3467"></A>
+<A NAME="section:esquemas"></A>
 <BR>
-Práctica: Analizador Descendente Predictivo Recursivo
+Esquemas de Traducción
 </H1>
+<P>
+<DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
+<I>Un <A NAME="3466"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
+en la cual se han insertado fragmentos de código en las partes derechas
+de sus reglas de producción. Los fragmentos de código asi insertados 
+se denominan <A NAME="3468"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
+y modifican los atributos asociados con los nodos del árbol sintáctico. 
+El orden en que se evalúan los fragmentos
+es el de un recorrido primero-profundo del árbol de análisis sintáctico.</I></DIV><P></P>
+Obsérvese que, en general, para poder aplicar un esquema de traducción hay 
+que construir el árbol sintáctico y después aplicar las acciones empotradas
+en las reglas en el orden de recorrido primero-profundo. Por supuesto, si 
+la gramática es ambigua una frase podría tener dos árboles y la ejecución de las
+acciones para ellos podría dar lugar a diferentes resultados. Si se quiere
+evitar la multiplicidad de resultados (interpretaciones semánticas)
+es necesario precisar de que árbol sintáctico concreto se esta hablando.
 
 <P>
-Partiendo del analizador sintáctico descendente predictivo recursivo para la gramática
-descrita en la sección <A HREF="node20.html#table:gramaticasimple">2.2.1</A>
+Por ejemplo, si en la regla <!-- MATH
+ $A \rightarrow \alpha \beta$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="67" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
+ SRC="img59.png"
+ ALT="$ A \rightarrow \alpha \beta $"></SPAN>
+insertamos un fragmento de código:
 
 <P>
-
-<H4><A NAME="SECTION04240010000000000000">
-Donde</A>
-</H4>
-  
-
-Puede encontrar la versión de la que partir en
-
-<P>
-
-<UL>
-<LI>Despliegue en Heroku:
-<A NAME="tex2html132"
-  HREF="http://predictiveparser.herokuapp.com/">http://predictiveparser.herokuapp.com/</A>
-</LI>
-<LI>Repositorio en GitHub:
-<A NAME="tex2html133"
-  HREF="https://github.com/crguezl/prdcalc">https://github.com/crguezl/prdcalc</A>
-</LI>
-<LI><PRE>
-[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ pwd -P
-/Users/casiano/local/src/javascript/PLgrado/predictiveRD/prdcalc
-[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ git remote -v
-heroku  git@heroku.com:predictiveparser.git (fetch)
-heroku  git@heroku.com:predictiveparser.git (push)
-origin  git@github.com:crguezl/prdcalc.git (fetch)
-origin  git@github.com:crguezl/prdcalc.git (push)
-</PRE>
-</LI>
-</UL>
+<DIV ALIGN="CENTER">
+<!-- MATH
+ $A \rightarrow \alpha \{ action \} \beta$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="132" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img60.png"
+ ALT="$ A \rightarrow \alpha \{ action \} \beta $"></SPAN>
+</DIV>
 
 <P>
-
-<H4><A NAME="SECTION04240020000000000000">
-Tareas</A>
-</H4>
-  
-
-Añada:
-
-<UL>
-<LI>Restas y divisiones. Procure que el arbol generado refleje la asociatividad 
-correcta
-</LI>
-<LI>Pase a  <A NAME="tex2html134"
-  HREF="http://coffeescript.org/">CoffeeScript</A>
- el mayor número de rutinas que pueda (fichero
-<code>views/main.coffee</code>)
-</LI>
-<LI>Usa  <A NAME="tex2html135"
-  HREF="http://sass-lang.com/">Sass</A>
- para las hojas de estilo
-</LI>
-<LI>Despliegue la aplicación en Heroku
-</LI>
-<LI>Añada pruebas
-</LI>
-</UL>
+La acción <!-- MATH
+ $\{ action \}$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="70" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img61.png"
+ ALT="$ \{ action \}$"></SPAN> se ejecutará después de todas las acciones
+asociadas con el recorrido del subárbol de <SPAN CLASS="MATH"><IMG
+ WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img42.png"
+ ALT="$ \alpha$"></SPAN> y antes que todas
+las acciones asociadas con el recorrido del subárbol <SPAN CLASS="MATH"><IMG
+ WIDTH="16" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
+ SRC="img62.png"
+ ALT="$ \beta$"></SPAN>.
 
 <P>
-
-<H4><A NAME="SECTION04240030000000000000">
-Sass</A>
-</H4>
-  
+El siguiente esquema de traducción recibe como entrada una expresión en infijo
+y produce como salida su traducción a postfijo para expresiones aritmeticas con sólo 
+restas de números:
 
 <P>
-
-<OL>
-<LI><A NAME="tex2html136"
-  HREF="http://sass-lang.com/">Sass</A>
-
-</LI>
-<LI><A NAME="tex2html137"
-  HREF="http://sass-lang.com/guide">Sass Basics</A>
-</LI>
-</OL>
-
-<P>
-
-<H4><A NAME="SECTION04240040000000000000">
-Slim</A>
-</H4>
-  
-
-<P>
-
-<OL>
-<LI><A NAME="tex2html138"
-  HREF="http://slim-lang.com/">slim</A>
-
-</LI>
-<LI><A NAME="tex2html139"
-  HREF="http://rdoc.info/gems/slim/frames">Slim docs</A>
-</LI>
-<LI><A NAME="tex2html140"
-  HREF="https://github.com/slim-template/html2slim">html2slim</A>
-</LI>
-</OL>
+<BR>
+<BR>
+<TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><!-- MATH
+ $expr   \rightarrow expr_1  -  NUM$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="179" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
+ SRC="img63.png"
+ ALT="$ expr \rightarrow expr_1 - NUM$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ expr.TRA = expr[1].TRA+" "+NUM.VAL+" - "}</code></TD>
+</TR>
+<TR><TD ALIGN="LEFT"><!-- MATH
+ $expr   \rightarrow NUM$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="116" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
+ SRC="img64.png"
+ ALT="$ expr \rightarrow NUM$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ expr.TRA = NUM.VAL }</code></TD>
+</TR>
+</TABLE>
+<BR>
+<BR>
 
 <P>
-
-<H4><A NAME="SECTION04240050000000000000">
-CoffeeScript</A>
-</H4>
-  
+Las apariciones de variables sintácticas en una regla de producción se indexan
+como se ve en el ejemplo, para distinguir de que nodo del árbol de análisis estamos
+hablando. Cuando hablemos del atributo de un nodo utilizaremos el punto (<code>.</code>). 
+Aquí <code>VAL</code> es un atributo de los nodos de tipo <SPAN CLASS="MATH"><IMG
+ WIDTH="53" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img65.png"
+ ALT="$ NUM$"></SPAN> denotando
+su valor numérico y para accederlo escribiremos <code>NUM.VAL</code>.
+Análogamente <code>expr.TRA</code> denota el atributo 
+<FONT COLOR="#ff0000"> traducción</FONT> de
+los nodos de tipo <SPAN CLASS="MATH"><IMG
+ WIDTH="40" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
+ SRC="img66.png"
+ ALT="$ expr$"></SPAN>.
 
 <P>
+<P>
+<DIV><B>Ejercicio  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
+<I>Muestre la secuencia de acciones a la
+que da lugar el esquema de traducción anterior 
+para la frase 7 -5 -4.</I></DIV><P></P>
 
-<OL>
-<LI><A NAME="tex2html141"
-  HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
-</LI>
-<LI><A NAME="tex2html142"
-  HREF="http://js2coffee.org/">js2coffee.org</A>
-</LI>
-</OL>
+<P>
+En este ejemplo, el cómputo del atributo <code>expr.TRA</code> depende de los atributos
+en los nodos hijos, o lo que es lo mismo, depende de los atributos de los símbolos
+en la parte derecha de la regla de producción. Esto ocurre a menudo y motiva la siguiente
+definición:
+
+<P>
+<P>
+<DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
+<I>Un atributo tal que su valor en un nodo
+puede ser computado en términos de los atributos de los hijos del nodo se dice
+que es un <A NAME="3472"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN>.</I></DIV><P></P>
 
 <P>
 
@@ -326,7 +305,7 @@ CoffeeScript</A>
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1076"
-  HREF="node23.html">Esquemas de Traducción</A>
+  HREF="node23.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1070"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
 <B> Ant:</B> <A NAME="tex2html1064"
