--- a/node22.html
+++ b/node22.html
@@ -233,7 +233,7 @@ definición:
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
-<I>Un atributo tal que su valor en un nodo
+<I>Un atributo tal que su valor en todo nodo del árbol sintáctico
 puede ser computado en términos de los atributos de los hijos del nodo se dice
 que es un <A NAME="3472"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN>.</I></DIV><P></P>
 
