--- a/node24.html
+++ b/node24.html
@@ -27,19 +27,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1105"
+<A NAME="tex2html1106"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1099"
+<A NAME="tex2html1100"
   HREF="node18.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1095"
+<A NAME="tex2html1096"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1101"
+<A NAME="tex2html1102"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1103"
+<A NAME="tex2html1104"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -91,18 +91,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1106"
+<B> Sig:</B> <A NAME="tex2html1107"
   HREF="node25.html">Análisis Sintáctico Mediante Precedencia</A>
-<B>Sup:</B> <A NAME="tex2html1100"
+<B>Sup:</B> <A NAME="tex2html1101"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
-<B> Ant:</B> <A NAME="tex2html1096"
+<B> Ant:</B> <A NAME="tex2html1097"
   HREF="node23.html">Eliminación de la Recursión</A>
 <B> Con:</B> 
-<A NAME="tex2html1101"
+<A NAME="tex2html1102"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1103"
+<A NAME="tex2html1104"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -114,22 +114,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1107"
-  HREF="node24.html#SECTION04260010000000000000">Donde</A>
 <LI><A NAME="tex2html1108"
-  HREF="node24.html#SECTION04260020000000000000">Tareas</A>
+  HREF="node24.html#SECTION04260010000000000000">Donde</A>
 <LI><A NAME="tex2html1109"
-  HREF="node24.html#SECTION04260030000000000000">Sass</A>
+  HREF="node24.html#SECTION04260020000000000000">Tareas</A>
 <LI><A NAME="tex2html1110"
-  HREF="node24.html#SECTION04260040000000000000">Slim</A>
+  HREF="node24.html#SECTION04260030000000000000">Sass</A>
 <LI><A NAME="tex2html1111"
+  HREF="node24.html#SECTION04260040000000000000">Slim</A>
+<LI><A NAME="tex2html1112"
   HREF="node24.html#SECTION04260050000000000000">CoffeeScript</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="3488"></A>
+   <A NAME="3489"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -185,7 +185,7 @@ correcta
 </LI>
 <LI>Pase a  <A NAME="tex2html134"
   HREF="http://coffeescript.org/">CoffeeScript</A>
- el mayor número de rutinas que pueda (fichero
+ todo el código (fichero
 <code>views/main.coffee</code>)
 </LI>
 <LI>Usa  <A NAME="tex2html135"
@@ -250,9 +250,13 @@ CoffeeScript</A>
 
 <OL>
 <LI><A NAME="tex2html141"
-  HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
+  HREF="http://coffeescript.org/">CoffeeScript</A>
+
 </LI>
 <LI><A NAME="tex2html142"
+  HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
+</LI>
+<LI><A NAME="tex2html143"
   HREF="http://js2coffee.org/">js2coffee.org</A>
 </LI>
 </OL>
@@ -260,19 +264,19 @@ CoffeeScript</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1105"
+<A NAME="tex2html1106"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1099"
+<A NAME="tex2html1100"
   HREF="node18.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1095"
+<A NAME="tex2html1096"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1101"
+<A NAME="tex2html1102"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1103"
+<A NAME="tex2html1104"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -324,11 +328,11 @@ CoffeeScript</A>
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1106"
+<B> Sig:</B> <A NAME="tex2html1107"
   HREF="node25.html">Análisis Sintáctico Mediante Precedencia</A>
-<B>Sup:</B> <A NAME="tex2html1100"
+<B>Sup:</B> <A NAME="tex2html1101"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
-<B> Ant:</B> <A NAME="tex2html1096"
+<B> Ant:</B> <A NAME="tex2html1097"
   HREF="node23.html">Eliminación de la Recursión</A>
 </DIV>
 <!--End of Navigation Panel-->
