--- a/node24.html
+++ b/node24.html
@@ -129,7 +129,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="3493"></A>
+   <A NAME="3494"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -180,11 +180,15 @@ Tareas</A>
 Añada:
 
 <UL>
-<LI>Extienda la gramática y el analizador según la gramática del 
+<LI>Extienda y modifique el analizador para que acepte el lenguaje 
+descrito por la gramática EBNF del 
 <A NAME="tex2html134"
-  HREF="http://en.wikipedia.org/wiki/Recursive_descent_parser">lenguaje PL/0</A>. 
+  HREF="http://en.wikipedia.org/wiki/Recursive_descent_parser">lenguaje PL/0</A>
+que se describe en la 
+entrada de la Wikipedia 
+<FONT COLOR="#0000ff"> Recursive descent parser</FONT>. 
 Procure que el arbol generado refleje la asociatividad 
-correcta. 
+correcta para las diferencias y las divisiones. 
 </LI>
 <LI>Pase a  <A NAME="tex2html135"
   HREF="http://coffeescript.org/">CoffeeScript</A>
