--- a/node20.html
+++ b/node20.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1057"
+<A NAME="tex2html1058"
   HREF="node21.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1051"
+<A NAME="tex2html1052"
   HREF="node18.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1045"
+<A NAME="tex2html1046"
   HREF="node19.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1053"
+<A NAME="tex2html1054"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1055"
+<A NAME="tex2html1056"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1058"
+<B> Sig:</B> <A NAME="tex2html1059"
   HREF="node21.html">Recursión por la Izquierda</A>
-<B>Sup:</B> <A NAME="tex2html1052"
+<B>Sup:</B> <A NAME="tex2html1053"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
-<B> Ant:</B> <A NAME="tex2html1046"
+<B> Ant:</B> <A NAME="tex2html1047"
   HREF="node19.html">Conceptos Básicos para el</A>
 <B> Con:</B> 
-<A NAME="tex2html1053"
+<A NAME="tex2html1054"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1055"
+<A NAME="tex2html1056"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -113,9 +113,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html1059"
-  HREF="node20.html#SECTION04221000000000000000">Introducción</A>
 <LI><A NAME="tex2html1060"
+  HREF="node20.html#SECTION04221000000000000000">Introducción</A>
+<UL>
+<LI><A NAME="tex2html1061"
+  HREF="node20.html#SECTION04221010000000000000">Ejemplo</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html1062"
   HREF="node20.html#SECTION04222000000000000000">Ejercicio: Recorrido del árbol en un ADPR</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -263,13 +268,20 @@ en <SPAN CLASS="MATH"><IMG
  ALT="$ \alpha$"></SPAN> se traducen en llamadas a la correspondiente subrutina asociada con <code>B</code>.
 
 <P>
+
+<H4><A NAME="SECTION04221010000000000000">
+Ejemplo</A>
+</H4>
+  
+
+<P>
 Para ilustrar el método,
 simplificaremos la gramática presentada en el ejercicio
 <A HREF="node41.html#ejercicio:tutugrammar">5.1.1</A> eliminando las declaraciones:
 
 <P>
 <BR><P></P>
-<DIV ALIGN="CENTER"><A NAME="3337"></A>
+<DIV ALIGN="CENTER"><A NAME="3338"></A>
 <TABLE>
 <CAPTION><STRONG>Tabla:</STRONG>
 Una Gramática Simple</CAPTION>
@@ -348,7 +360,7 @@ Una Gramática Simple</CAPTION>
 <P>
 La secuencia de llamadas cuando se procesa la entrada mediante 
 el siguiente programa construye 
-<FONT COLOR="#ff0000"> implícitamente</FONT> el <A NAME="3480"></A><SPAN  CLASS="textbf">árbol 
+<FONT COLOR="#ff0000"> implícitamente</FONT> el <A NAME="3485"></A><SPAN  CLASS="textbf">árbol 
 de análisis sintáctico concreto</SPAN>.
 
 <P>
@@ -720,7 +732,7 @@ en una secuencia <!-- MATH
 <P>
 
 <H2><A NAME="SECTION04222000000000000000"></A>
-   <A NAME="3485"></A>
+   <A NAME="3490"></A>
 <BR>
 Ejercicio: Recorrido del árbol en un ADPR
 </H2>
@@ -731,19 +743,19 @@ analizador descendente predictivo recursivo? ¿En que orden son visitados los no
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1057"
+<A NAME="tex2html1058"
   HREF="node21.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1051"
+<A NAME="tex2html1052"
   HREF="node18.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1045"
+<A NAME="tex2html1046"
   HREF="node19.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1053"
+<A NAME="tex2html1054"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1055"
+<A NAME="tex2html1056"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -795,11 +807,11 @@ analizador descendente predictivo recursivo? ¿En que orden son visitados los no
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1058"
+<B> Sig:</B> <A NAME="tex2html1059"
   HREF="node21.html">Recursión por la Izquierda</A>
-<B>Sup:</B> <A NAME="tex2html1052"
+<B>Sup:</B> <A NAME="tex2html1053"
   HREF="node18.html">Analizadores Descendentes Predictivos en</A>
-<B> Ant:</B> <A NAME="tex2html1046"
+<B> Ant:</B> <A NAME="tex2html1047"
   HREF="node19.html">Conceptos Básicos para el</A>
 </DIV>
 <!--End of Navigation Panel-->
