--- a/node18.html
+++ b/node18.html
@@ -135,29 +135,31 @@ Analizadores Descendentes Predictivos en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html1020"
   HREF="node20.html#SECTION04221010000000000000">Ejemplo</A>
-</UL>
 <LI><A NAME="tex2html1021"
+  HREF="node20.html#SECTION04221020000000000000">Caracterización de las Gramáticas Analizables</A>
+</UL>
+<LI><A NAME="tex2html1022"
   HREF="node20.html#SECTION04222000000000000000">Ejercicio: Recorrido del árbol en un ADPR</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1022"
-  HREF="node21.html">Recursión por la Izquierda</A>
 <LI><A NAME="tex2html1023"
-  HREF="node22.html">Esquemas de Traducción</A>
+  HREF="node21.html">Recursión por la Izquierda</A>
 <LI><A NAME="tex2html1024"
-  HREF="node23.html">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node22.html">Esquemas de Traducción</A>
 <LI><A NAME="tex2html1025"
+  HREF="node23.html">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+<LI><A NAME="tex2html1026"
   HREF="node24.html">Práctica: Analizador Descendente Predictivo Recursivo</A>
 <UL>
-<LI><A NAME="tex2html1026"
-  HREF="node24.html#SECTION04260010000000000000">Donde</A>
 <LI><A NAME="tex2html1027"
-  HREF="node24.html#SECTION04260020000000000000">Tareas</A>
+  HREF="node24.html#SECTION04260010000000000000">Donde</A>
 <LI><A NAME="tex2html1028"
-  HREF="node24.html#SECTION04260030000000000000">Sass</A>
+  HREF="node24.html#SECTION04260020000000000000">Tareas</A>
 <LI><A NAME="tex2html1029"
-  HREF="node24.html#SECTION04260040000000000000">Slim</A>
+  HREF="node24.html#SECTION04260030000000000000">Sass</A>
 <LI><A NAME="tex2html1030"
+  HREF="node24.html#SECTION04260040000000000000">Slim</A>
+<LI><A NAME="tex2html1031"
   HREF="node24.html#SECTION04260050000000000000">CoffeeScript</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
