--- a/node20.html
+++ b/node20.html
@@ -699,7 +699,7 @@ este seudocódigo:
 <PRE>
 A = function() {
   if (lookahead in FIRST(gamma_1)) { imitar gamma_1 }
-  elsif (lookahead in FIRST(gamma_2)) { imitar gamma_2 }
+  else if (lookahead in FIRST(gamma_2)) { imitar gamma_2 }
   ...
   else (lookahead in FIRST(gamma_n)) { imitar gamma_n }
 }
