--- a/node15.html
+++ b/node15.html
@@ -59,7 +59,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   WIDTH="30" ALIGN="BOTTOM" BORDER="0"
  SRC="gv.jpeg"
  ALT="ps"></A><A NAME="tex2html6"
-  HREF="https://dl.dropbox.com/u/14539152/PLgrado/PLgradoBOOK/index.html"><IMG
+  HREF="http://crguezl.github.io/pl-html/"><IMG
   WIDTH="60" ALIGN="BOTTOM" BORDER="0"
  SRC="lupa.gif"
  ALT="ruby gems"></A><A NAME="tex2html7"
@@ -70,11 +70,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="http://github.com"><IMG
   WIDTH="27" ALIGN="BOTTOM" BORDER="0"
  SRC="google-code-project-hosting.jpeg"
- ALT="google code project hosting"></A><A NAME="tex2html9"
-  HREF="http://jquery.com/"><IMG
+ ALT="github"></A><A NAME="tex2html9"
+  HREF="https://plus.google.com/u/0/communities/107031495100582318205"><IMG
   WIDTH="27" ALIGN="BOTTOM" BORDER="0"
  SRC="perl6.jpg"
- ALT="blogs"></A><A NAME="tex2html10"
+ ALT="comunidad g+ PL1314"></A><A NAME="tex2html10"
   HREF="http://www.google.es/"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="ggoogle.gif"
@@ -87,10 +87,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="ull.gif"
  ALT="ull"></A><A NAME="tex2html13"
-  HREF="http://crondinosaur.blogspot.com/"><IMG
+  HREF="https://github.com/crguezl"><IMG
   WIDTH="32" ALIGN="BOTTOM" BORDER="0"
  SRC="logopcgull.gif"
- ALT="pcgull"></A>
+ ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html964"
   HREF="node16.html">Práctica: Ficheros INI</A>
@@ -165,7 +165,7 @@ Debe permitir la presencia de comillas y caracteres escapados.
   WIDTH="30" ALIGN="BOTTOM" BORDER="0"
  SRC="gv.jpeg"
  ALT="ps"></A><A NAME="tex2html6"
-  HREF="https://dl.dropbox.com/u/14539152/PLgrado/PLgradoBOOK/index.html"><IMG
+  HREF="http://crguezl.github.io/pl-html/"><IMG
   WIDTH="60" ALIGN="BOTTOM" BORDER="0"
  SRC="lupa.gif"
  ALT="ruby gems"></A><A NAME="tex2html7"
@@ -176,11 +176,11 @@ Debe permitir la presencia de comillas y caracteres escapados.
   HREF="http://github.com"><IMG
   WIDTH="27" ALIGN="BOTTOM" BORDER="0"
  SRC="google-code-project-hosting.jpeg"
- ALT="google code project hosting"></A><A NAME="tex2html9"
-  HREF="http://jquery.com/"><IMG
+ ALT="github"></A><A NAME="tex2html9"
+  HREF="https://plus.google.com/u/0/communities/107031495100582318205"><IMG
   WIDTH="27" ALIGN="BOTTOM" BORDER="0"
  SRC="perl6.jpg"
- ALT="blogs"></A><A NAME="tex2html10"
+ ALT="comunidad g+ PL1314"></A><A NAME="tex2html10"
   HREF="http://www.google.es/"><IMG
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="ggoogle.gif"
@@ -193,10 +193,10 @@ Debe permitir la presencia de comillas y caracteres escapados.
   WIDTH="35" ALIGN="BOTTOM" BORDER="0"
  SRC="ull.gif"
  ALT="ull"></A><A NAME="tex2html13"
-  HREF="http://crondinosaur.blogspot.com/"><IMG
+  HREF="https://github.com/crguezl"><IMG
   WIDTH="32" ALIGN="BOTTOM" BORDER="0"
  SRC="logopcgull.gif"
- ALT="pcgull"></A>
+ ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html964"
   HREF="node16.html">Práctica: Ficheros INI</A>
@@ -208,7 +208,7 @@ Debe permitir la presencia de comillas y caracteres escapados.
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2014-03-08</I>
+2014-03-10</I>
 </ADDRESS>
 </BODY>
 </HTML>
