--- a/node88.html
+++ b/node88.html
@@ -136,6 +136,10 @@ for Web server applications flow.</FONT>
 
 <P>
 
+<img src="server_side_code_flow.png" />
+
+<P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2343"
   HREF="node89.html">
