--- a/node24.html
+++ b/node24.html
@@ -133,7 +133,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="3558"></A>
+   <A NAME="3560"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -371,7 +371,8 @@ Construyendo Árboles con la Asociatividad Correcta</A>
 </H4>
   
 
-Añadamos el operador <code>-</code>. Para ello, podemos extender nuestro código 
+Añadamos el operador <code>-</code> al código de nuestra práctica. 
+Para ello, podemos extender nuestro código 
 como sigue:
 <PRE>
   expression = -&gt;
@@ -453,6 +454,15 @@ Es <!-- MATH
  ALT="$ \gamma \alpha *$"></SPAN>.
 <BR>
 <BR>
+Por tanto el método asociado con <SPAN CLASS="MATH"><IMG
+ WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img1.png"
+ ALT="$ A$"></SPAN> podría reescribirse como sigue:
+<PRE>
+A = function() {
+  gamma();
+}
+</PRE>
 
 <P>
 
