--- a/node24.html
+++ b/node24.html
@@ -459,9 +459,12 @@ Por tanto el método asociado con <SPAN CLASS="MATH"><IMG
  SRC="img1.png"
  ALT="$ A$"></SPAN> podría reescribirse como sigue:
 <PRE>
-A = function() {
-  gamma();
-}
+A = () -&gt; 
+  gamma() # imitar gamma
+  gamma_action()
+  while lookahead and lookahead.type belongs to  FIRST(alpha)
+    alpha()
+    alpha_action()
 </PRE>
 
 <P>
