--- a/node24.html
+++ b/node24.html
@@ -461,9 +461,9 @@ Por tanto el método asociado con <SPAN CLASS="MATH"><IMG
 <PRE>
 A = () -&gt; 
   gamma() # imitar gamma
-  gamma_action()
+  gamma_action() # acción semántica asociada con gamma
   while lookahead and lookahead.type belongs to  FIRST(alpha)
-    alpha()
+    alpha() # imitar alpha
     alpha_action()
 </PRE>
 
